# geozero

geozero/: Cargo.toml
geozero-api/src/: lib.rs
geozero-bench/: Cargo.toml
geozero-cli/: Cargo.toml
geozero-core/: Cargo.toml
geozero-core/benches/: geojson.rs
geozero-core/src/: geojson_deserializer.rs  geojson_parser.rs  geojson_transcoder.rs  lib.rs
